force-app/main/default/objects/HM_Dashboard_Component__c/HM_Dashboard_Component__c.object-meta.xml
<CustomObject>
    <description>Individual component configuration (tile, list, etc.)</description>
    <label>Dashboard Component</label>
    <nameField>
        <label>Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dashboard Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>