force-app/main/default/objects/HM_Dashboard_Component__c/fields/HM_Active__c.field-meta.xml
<CustomField>
    <fullName>HM_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Check this box to make the component available for use. Uncheck to hide the component without deleting it. Inactive components are not displayed on dashboards.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>