force-app/main/default/objects/HM_Dashboard_Component__c/fields/HM_Apex_Parameters__c.field-meta.xml
<CustomField>
    <fullName>HM_Apex_Parameters__c</fullName>
    <inlineHelpText>JSON object containing parameters to pass to the Apex method. Use when &quot;Use Custom Apex&quot; is checked. Format: {&quot;key&quot;: &quot;value&quot;}. Example: {} for no parameters, or {&quot;status&quot;: &quot;Active&quot;, &quot;limit&quot;: 10}. Leave blank for no parameters.</inlineHelpText>
    <label>Apex Parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>