force-app/main/default/objects/HM_Dashboard_Component__c/fields/HM_Dashboard_Component_Group__c.field-meta.xml
<CustomField>
    <fullName>HM_Dashboard_Component_Group__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Select the component group this component belongs to. Leave blank to use this component as a standalone component that can be added directly to Lightning pages.</inlineHelpText>
    <label>Component Group</label>
    <referenceTo>HM_Dashboard_Component_Group__c</referenceTo>
    <relationshipLabel>Components</relationshipLabel>
    <relationshipName>Components</relationshipName>
    <type>Lookup</type>
</CustomField>