force-app/main/default/objects/HM_Dashboard_Component__c/fields/HM_Enable_Column_Sorting__c.field-meta.xml
<CustomField>
    <fullName>HM_Enable_Column_Sorting__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable column sorting for list components. When enabled, users can click column headers to sort data by that column (ascending/descending).</inlineHelpText>
    <label>Enable Column Sorting</label>
    <type>Checkbox</type>
</CustomField>