force-app/main/default/objects/HM_Dashboard_Component__c/fields/HM_Enable_List_Pagination__c.field-meta.xml
<CustomField>
    <fullName>HM_Enable_List_Pagination__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable pagination for list components. When enabled, records will be displayed in pages based on Records Per Page setting.</inlineHelpText>
    <label>Enable List Pagination</label>
    <type>Checkbox</type>
</CustomField>