force-app/main/default/objects/HM_Dashboard_Component__c/fields/HM_Icon_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>HM_Icon_Background_Color__c</fullName>
    <inlineHelpText>Background color for the tile icon. Select &apos;None&apos; to display icon without background.</inlineHelpText>
    <label>Icon Background Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Alert</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>