force-app/main/default/objects/HM_Dashboard_Component__c/fields/HM_Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>HM_Icon_Name__c</fullName>
    <inlineHelpText>Lightning icon name to display with this component. Format: utility:iconname or standard:iconname. Examples: utility:moneybag, utility:check, utility:warning, utility:people. Leave blank for no icon.</inlineHelpText>
    <label>Icon Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>