force-app/main/default/objects/HM_Dashboard_Component__c/fields/HM_Records_Per_Page__c.field-meta.xml
<CustomField>
    <fullName>HM_Records_Per_Page__c</fullName>
    <defaultValue>25</defaultValue>
    <inlineHelpText>Number of records to display per page when pagination is enabled. Default is 25.</inlineHelpText>
    <label>Records Per Page</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>