force-app/main/default/objects/HM_Dashboard_Component__c/fields/HM_Row_Icon_Configuration__c.field-meta.xml
<CustomField>
    <fullName>HM_Row_Icon_Configuration__c</fullName>
    <inlineHelpText>Comma-separated list of object type to icon mappings. Format: ObjectType:IconName,ObjectType:IconName. Example: Opportunity:standard:opportunity,Case:standard:case,Account:standard:account</inlineHelpText>
    <label>Row Icon Configuration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>