force-app/main/default/objects/HM_Dashboard_Component__c/fields/HM_Show_All_Records_Filter__c.field-meta.xml
<CustomField>
    <fullName>HM_Show_All_Records_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When enabled and multiple data sources exist, shows an &apos;All&apos; tab that displays combined rows from all data sources.</inlineHelpText>
    <label>Show All Records Filter</label>
    <type>Checkbox</type>
</CustomField>