force-app/main/default/objects/HM_Dashboard_Component__c/fields/HM_Subtitle__c.field-meta.xml
<CustomField>
    <fullName>HM_Subtitle__c</fullName>
    <inlineHelpText>Optional subtitle text displayed below the title. For lists, this appears as the card header subtitle. Use {value} as a placeholder to insert a calculated value from a "Subtitle" Detail Map. For example: "{value} deals won" or "deals won: {value}". Works for both Tile and List components.</inlineHelpText>
    <label>Subtitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>