force-app/main/default/objects/HM_Dashboard_Component__c/fields/HM_Title__c.field-meta.xml
<CustomField>
    <fullName>HM_Title__c</fullName>
    <inlineHelpText>Display title for this component. For tiles, this appears as the label above the value. For lists, this appears as the card header title.</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>