force-app/main/default/objects/HM_Dashboard_Component__c/fields/HM_Type__c.field-meta.xml
<CustomField>
    <fullName>HM_Type__c</fullName>
    <inlineHelpText>Select the component type. Tile: KPI metric card with value, change, and subtitle. Mini-Tile: Smaller version of tile. List: Tabular data display. Chart: Data visualization (not implemented in this phase).</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tile</fullName>
            </value>
            <value>
                <fullName>Mini-Tile</fullName>
            </value>
            <value>
                <fullName>List</fullName>
            </value>
            <value>
                <fullName>Chart</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>