force-app/main/default/objects/HM_Dashboard_Component__c/recordTypes/Tile.recordType-meta.xml
<RecordType>
    <fullName>Tile</fullName>
    <active>true</active>
    <label>Tile</label>
</RecordType>