force-app/main/default/objects/HM_Dashboard_Component__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HM_Dashboard_Component_Group__c</columns>
    <columns>HM_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>